スライダーデザイン変更

--- a/wp/wp-content/plugins/bxslider-wp/bxslider/jquery.bxslider.css
+++ b/wp/wp-content/plugins/bxslider-wp/bxslider/jquery.bxslider.css
@@ -98,7 +98,7 @@
 
 .bx-wrapper .bx-pager.bx-default-pager a:hover,
 .bx-wrapper .bx-pager.bx-default-pager a.active {
-	background: #000;
+	background: #ea5514;
 }
 
 /* DIRECTION CONTROLS (NEXT / PREV) */
