スライダー修正。

--- a/wp/wp-content/themes/wfn2017/SCSS/base.scss
+++ b/wp/wp-content/themes/wfn2017/SCSS/base.scss
@@ -140,13 +140,13 @@ header {
 --------------------------------------------------------------*/
 .main-navigation {
 // 	background: #333;
-  background: #c11329;
+    background: #c11329;
 	font-size: 0.9em;
 	text-transform: uppercase;
 	line-height: 1;
-  clear: both;
+    clear: both;
 	display: block;
-	float: left;
+	//float: left;
 	width: 100%;
 }
 
