--- a/wp/wp-content/themes/wfn2017/css/base.css
+++ b/wp/wp-content/themes/wfn2017/css/base.css
@@ -31,7 +31,7 @@ table th { background: #F7F8F8; min-width: 100px; }
 /*--------------------------------------------------------------
 # Navigation
 --------------------------------------------------------------*/
-.main-navigation { background: #c11329; font-size: 0.9em; text-transform: uppercase; line-height: 1; clear: both; display: block; float: left; width: 100%; }
+.main-navigation { background: #c11329; font-size: 0.9em; text-transform: uppercase; line-height: 1; clear: both; display: block; width: 100%; }
 
 .main-navigation a { color: #fff; height: 40px; text-indent: 10px; padding: 13px 0; display: block; text-decoration: none; }
 
