スタッフブログ一覧、スタイル修正。

--- a/wp/wp-content/themes/wfn2017/SCSS/page.scss
+++ b/wp/wp-content/themes/wfn2017/SCSS/page.scss
@@ -515,6 +515,13 @@
 	#main {
 		
 		&.archive {
+    		
+    		.page-title {
+        		
+        		.title {
+            		padding: 0;
+        		}
+    		}
 			
 			.text-box {
 				padding: 5px 0;
