タイムテーブル細かな部分を調整

--- a/wp/wp-content/themes/wfn2017_dev/SCSS/page.scss
+++ b/wp/wp-content/themes/wfn2017_dev/SCSS/page.scss
@@ -195,6 +195,9 @@
 			background: #F7F8F8;
 			min-width: 100px;
 		}
+		table.time-table th {
+			color: #fff;
+		}
 		.bt {
 			font-size: $fs-20;
 			font-weight: bold;
