--- a/wp/wp-content/themes/wfn2017/SCSS/page.scss
+++ b/wp/wp-content/themes/wfn2017/SCSS/page.scss
@@ -196,6 +196,9 @@
 			background: #F7F8F8;
 			min-width: 100px;
 		}
+		table.time-table {
+			color: #fff;
+		}
 		.bt {
 			font-size: $fs-20;
 			font-weight: bold;
