タイムテーブルの見ため調整

--- a/wp/wp-content/themes/wfn2017/SCSS/page.scss
+++ b/wp/wp-content/themes/wfn2017/SCSS/page.scss
@@ -196,7 +196,7 @@
 			background: #F7F8F8;
 			min-width: 100px;
 		}
-		table.time-table {
+		table.time-table th {
 			color: #fff;
 		}
 		.bt {
