blog iframe テスト

--- a/wp/wp-content/themes/wfn2017_dev/SCSS/page.scss
+++ b/wp/wp-content/themes/wfn2017_dev/SCSS/page.scss
@@ -345,10 +345,13 @@
 		margin: 25px 0;
 		line-height: 1.8;
 		
-		img,
-		iframe {
+		img {
 			max-width: 100%;
 			height: auto;
+		}
+
+		iframe {
+			max-width: 100%;
 		}
 		
 		p {
